--- a/css/scss/_articles.scss
+++ b/css/scss/_articles.scss
@@ -4,13 +4,13 @@
     background-image: url("../images/image-restaurant.jpg");
   }
   #img2 {
-    background-image: url("/images/image-currency.jpg");
+    background-image: url("../images/image-currency.jpg");
   }
   #img3 {
     background-image: url("../images/image-plane.jpg");
   }
   #img4 {
-    background-image: url("/images/image-confetti.jpg");
+    background-image: url("../images/image-confetti.jpg");
   }
 }
 
