--- a/css/scss/_hero.scss
+++ b/css/scss/_hero.scss
@@ -9,7 +9,7 @@
   }
 
   &__image {
-    background-image: url("/images/bg-intro-mobile.svg");
+    background-image: url("../images/bg-intro-mobile.svg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,7 +32,7 @@
         content: "";
         position: absolute;
         height: 100%;
-        background-image: url("/images/bg-intro-desktop.svg");
+        background-image: url("../images/bg-intro-desktop.svg");
         background-repeat: no-repeat;
         background-position: center bottom;
         width: 150%;
@@ -43,7 +43,7 @@
 
     &:after {
       content: "";
-      background-image: url("/images/image-mockups.png");
+      background-image: url("../images/image-mockups.png");
       background-position: center bottom;
       background-repeat: no-repeat;
       background-size: 93%;
